--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
      <section id="react"></section>
      <script src="js/underscore.js"></script>
-     <script src="js/bundle.js"></script>
+     <script src="static/js/compiled.js"></script>
   </body>
 </html>
