added initial rendering with threejs

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Flux • Chat</title>
-    <link href="http://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
      <section id="react"></section>
-     <script src="js/underscore.js"></script>
+     <canvas id="canvas"></canvas>
+     <script src="static/js/libs/underscore.js"></script>
+     <script src="static/js/libs/three.js"></script>
      <script src="static/js/compiled.js"></script>
   </body>
 </html>
